<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ContactDevelopers"
    tools:showIn="@layout/activity_contact">

    <ImageView
        android:id="@+id/imglogo"
        android:layout_width="362dp"
        android:layout_height="155dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/dv"

        />

    <TextView
        android:id="@+id/abt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imglogo"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="-5dp"
        android:layout_marginRight="15dp"
        android:scrollbars="vertical"
        android:text="@string/devf"
        android:textColor="#fff"
        android:textSize="18sp"
        app:fontFamily="@font/nunito" />

    <TextView
        android:id="@+id/servt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/abt"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="15dp"
        android:scrollbars="vertical"
        android:text="@string/servtitl"
        android:textSize="30sp"
        app:fontFamily="@font/nunito" />

    <TextView
        android:id="@+id/sercont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/servt"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:scrollbars="vertical"
        android:text="@string/serv"
        android:textColor="#fff"
        android:textSize="18sp"
        app:fontFamily="@font/nunito" />

    <TextView
        android:id="@+id/textview_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="252dp"
        android:background="#212121"
        android:padding="8dp"
        android:text="Message us on FB"
        android:textColor="#ffffff" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginBottom="235dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"

        android:elevation="16dp"
        android:focusable="true"

        app:backgroundTint="#21DAF3"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_messenger"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textview_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="88dp"
        android:layout_marginRight="88dp"
        android:layout_marginBottom="183dp"
        android:background="#212121"
        android:padding="8dp"
        android:text="Message us on WhatsApp"
        android:textColor="#ffffff" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="175dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"


        app:backgroundTint="#37E63F"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/ic_whatsapp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="101dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:elevation="16dp"
        android:focusable="true"
        android:visibility="visible"
        app:backgroundTint="#ffffff"
        app:pressedTranslationZ="12dp"
        app:srcCompat="@drawable/plus" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8455292583245907/8322212535"></com.google.android.gms.ads.AdView>
</RelativeLayout>
